B3::foldPathConstants() needs to execute its insertion set https://bugs.webkit.org/show_bug.cgi?id=154020

Reviewed by Saam Barati.

* b3/B3FoldPathConstants.cpp:
* b3/testb3.cpp:
(JSC::B3::testFoldPathEqual): Added this. It used to crash in validation.
(JSC::B3::run):



Canonical link: https://commits.webkit.org/172104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196280 268f45cc-cd09-0410-ab3c-d52691b4dbfc