Source/JavaScriptCore/b3/B3FoldPathConstants.cpp
@@ -194,6 +194,7 @@ public:
                         child = override.valueNode;
                 }
             }
+            m_insertionSet.execute(block);
         }
 
         if (changed) {
